--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
 		{% endif %}
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
-		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-		<link href="css/melonjs.css" rel="stylesheet" media="screen">
+		<link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="{{ site.baseurl }}/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+		<link href="{{ site.baseurl }}/css/melonjs.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
 
@@ -26,13 +26,13 @@
 					<a class="brand" href="/">melonJS</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<li{% if page.url == "/index.html" %} class="active"{% endif %}><a href="/">Home</a></li>
-							<li{% if page.url == "/download.html" %} class="active"{% endif %}><a href="/download.html">Download</a></li>
-							<li{% if page.url == "/documentation/index.html" %} class="active"{% endif %}><a href="/documentation">Documentation</a></li>
-							<li{% if page.url == "/blog/index.html" %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
-							<li{% if page.url == "/gallery.html" %} class="active"{% endif %}><a href="/gallery.html">Gallery</a></li>
+							<li{% if page.url == "/index.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/">Home</a></li>
+							<li{% if page.url == "/download.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/download.html">Download</a></li>
+							<li{% if page.url == "/documentation/index.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/documentation">Documentation</a></li>
+							<li{% if page.url == "/blog/index.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/blog/">Blog</a></li>
+							<li{% if page.url == "/gallery.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/gallery.html">Gallery</a></li>
 							<li><a href="http://groups.google.com/group/melonjs">Forum</a></li>
-							<li{% if page.url == "/contact.html" %} class="active"{% endif %}><a href="/contact.html">Contact Us</a></li>
+							<li{% if page.url == "/contact.html" %} class="active"{% endif %}><a href="{{ site.baseurl }}/contact.html">Contact Us</a></li>
 						</ul>
 					</div><!--/.nav-collapse -->
 				</div>
@@ -49,6 +49,6 @@
 		</div>
 
 		<script src="http://code.jquery.com/jquery.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 	</body>
 </html>
