--- a/style/style.css
+++ b/style/style.css
@@ -190,12 +190,12 @@ ul#menu li a:hover, ul#menu li.selected a, ul#menu li.selected a:hover
   padding: 0;}
 
 #content ul
-{ margin: 2px 0 22px 0px;}
+{ margin: 2px 0 2px 0px;}
 
 #content ul li
 { list-style-type: none;
   background: url(bullet.png) no-repeat;
-  margin: 0 0 6px 0;
+  margin: 0;
   padding: 0 0 4px 25px;
   line-height: 1.5em;}
 
