--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,12 +73,12 @@ import "../styles/glyphicons.scss";
 			//border: 1vmin solid white;
 		}
 		li {
-			list-style: none;
-			&:before{
-				content: "•";
-				vertical-align: top;
-				margin-right: 10px;
-			}
+			// list-style: none;
+			// &:before{
+			// 	content: "•";
+			// 	vertical-align: top;
+			// 	margin-right: 10px;
+			// }
 			> * {
 				display: inline-block;
 			}
