fix the link coloring

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,6 +5,10 @@
         header {
             background-color: #404040;
             //padding: 0 10vmin;
+            a {
+                color: inherit;
+                text-decoration: none;
+            }
             nav {
                 ul {
                     display: flex;
