--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,6 +55,8 @@ import "../styles/glyphicons.scss";
 			&:nth-of-type(1){
 				margin-left: 0;
 			}
+			color: inherit;
+            text-decoration: none;
 			display: inline-block;
 			padding: 2vmin;
 			margin: 2vmin 0.5vmin;
