make the spacing more readable

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -139,6 +139,7 @@ import "../styles/glyphicons.scss";
 				
 			}
 			.browsers {
+				margin-top: 3vmin;
 				tbody {
 					tr {
 						padding: 5vmin 0;
@@ -165,6 +166,10 @@ import "../styles/glyphicons.scss";
 				background-color: $gray;
 				height: 0.1vmin;
 				border: none;
+				margin-bottom: 3vmin;
+			}
+			ul {
+				margin-top: 3vmin;
 			}
 	</style>
         <main>
