make the divider thinner

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -164,7 +164,7 @@ import "../styles/glyphicons.scss";
 			}
 			hr {
 				background-color: $gray;
-				height: 0.1vmin;
+				height: 0.5px;
 				border: none;
 				margin-bottom: 3vmin;
 			}
@@ -333,7 +333,7 @@ import "../styles/glyphicons.scss";
 	
 		<div>
 			<h3>Third Party Tools Integration<a id="third-party" class="anchor"></a></h3>
-			<hr>
+			<hr/>
 			melonJS provides native integration and support for the following 3rd party tools :
 			<br>
 			<ul>
