--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -17,9 +17,9 @@
                     max-width: 100vw;
                     flex-wrap: wrap;
                     li {
+                        position: relative;
                         flex-grow: 1;
                         text-align: center;
-                        padding: 3vmin 8vmin;
                         list-style: none;
                         color: #9d9d9d;
                         transition: background-color 0.3s ease, color 0.3s ease;
@@ -27,6 +27,18 @@
                             color: white;
                             background-color: #202020;
                             transition: none;
+                        }
+                        a {
+                            // position: absolute;
+                            // top: 50%;
+                            // left: 50%;
+                            // transform: translate(-50%, -50%);
+                            padding: 2vmin;
+                            height: calc(100% - 4vmin);
+                            width: calc(100% - 4vmin);
+                            vertical-align: middle;
+                            display: inline-block;
+                            vertical-align: middle;
                         }
                     }
                 }
