increase variable use

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,12 +3,12 @@ $desktop-width: 1080px;
 // Color Palette
 $green: #6ba832;
 $light-green: #5cb85c;
-$jean: #77A4A9;
+$jean: #77a4a9;
 $ocean: #337ab7;
-$cream: #EFAD72;
-$dust: #B7A5A6;
-$ash: #EADEE3;
-$clay: #8D555B;
+$cream: #efad72;
+$dust: #b7a5a6;
+$ash: #eadee3;
+$clay: #8d555b;
 $red: #d9534f; // Warning Color
 $white: white;
 $black: black;
