--- a/melon-astro/src/components/header.astro
+++ b/melon-astro/src/components/header.astro
@@ -2,14 +2,9 @@
 ---
 <header>
     <style lang="scss">
-        @import "../styles/variables.scss";
         header {
             background-color: $gray;
             //padding: 0 10vmin;
-            a {
-                color: inherit;
-                text-decoration: none;
-            }
             nav {
                 ul {
                     display: flex;
@@ -18,9 +13,9 @@
                     max-width: 100vw;
                     flex-wrap: wrap;
                     li {
-                        position: relative;
                         flex-grow: 1;
                         text-align: center;
+                        padding: 3vmin 8vmin;
                         list-style: none;
                         color: #9d9d9d;
                         transition: background-color 0.3s ease, color 0.3s ease;
@@ -28,18 +23,6 @@
                             color: white;
                             background-color: $dark-gray;
                             transition: none;
-                        }
-                        a {
-                            // position: absolute;
-                            // top: 50%;
-                            // left: 50%;
-                            // transform: translate(-50%, -50%);
-                            padding: 3vmin 2vmin;
-                            width: calc(100% - 4vmin);
-                            height: calc(100% - 6vmin);
-                            vertical-align: middle;
-                            display: inline-block;
-                            vertical-align: middle;
                         }
                     }
                 }
@@ -63,6 +46,7 @@
             <li><a href="https://github.com/melonjs/melonJS/wiki/made-with-melonJS">Gallery</a></li>
             <li><a href="https://melonjs.discourse.group">Forum</a></li>
             <li><a href="https://discord.gg/aur7JMk">Discord</a></li>
+            <li class="mobile-forkme"><a href="https://github.com/melonjs/melonjs">Github</a></li>
         </ul>
     </nav>
 </header>
