make header a bit more responsive

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,4 +1,5 @@
 ---
+const pathname = new URL(Astro.request.url).pathname
 ---
 <header>
     <style lang="scss">
@@ -48,7 +49,7 @@
     </style>
     <nav>
         <ul>
-            <li class="active"><a href="#top">Home</a></li>
+            <li class={pathname === "/" ? "active" : null}><a href="#top">Home</a></li>
             <li><a href="https://www.npmjs.com/package/melonjs">Download</a></li>
             <li><a href="http://melonjs.github.io/docs/">API</a></li>
             <li><a href="https://github.com/melonjs/melonJS">Github</a></li>
