open discord in a new tab

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -55,7 +55,7 @@ const pathname = new URL(Astro.request.url).pathname
             <li><a href="https://github.com/melonjs/melonJS">Github</a></li>
             <li><a href="https://github.com/melonjs/melonJS/wiki/made-with-melonJS">Gallery</a></li>
             <li><a href="https://melonjs.discourse.group">Forum</a></li>
-            <li><a href="https://discord.gg/aur7JMk">Discord</a></li>
+            <li><a href="https://discord.gg/aur7JMk" target="_blank">Discord</a></li>
         </ul>
     </nav>
 </header>
