make the h1 responsive

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,6 +54,11 @@ import "../styles/glyphicons.scss";
       margin-top: 4vmin;
       margin-bottom: 2vmin;
     }
+	h1 {
+		@media (min-width: $mobile-width) {
+			font-size: 3em;
+		}
+	}
     a.btn {
       &:nth-of-type(1) {
         margin-left: 0;
