fix the z index issues

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -8,6 +8,7 @@ const pathname = new URL(Astro.request.url).pathname;
     header {
       position: sticky;
       top: 0;
+      z-index: 100;
       background-color: $gray;
       //padding: 0 10vmin;
       a {
