--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -10,6 +10,7 @@ const pathname = new URL(Astro.request.url).pathname;
       top: 0;
       z-index: 100;
       background-color: $gray;
+      border-bottom: 0.5vmin solid $dark-gray;
       //padding: 0 10vmin;
       a {
         color: inherit;
