add a pretty melon colored trim

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,8 @@ import "../styles/glyphicons.scss";
       }
       &:nth-child(odd) {
         background-color: $gray;
-        color: white;
+        box-shadow: 2vmin 0 2vmin 0 $green;
+        color: $white;
       }
     }
     .jumbotron {
