--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,9 @@
 $mobile-width: 640px;
 $desktop-width: 1080px;
 // Color Palette
-$green: #6ba832;
-$light-green: #5cb85c;
+$dark-green: #6ba832;
+$green: #5cb85c;
+$light-green: #8de48d;
 $jean: #77a4a9;
 $ocean: #337ab7;
 $cream: #efad72;
