fix the buttons appearance

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,13 +75,13 @@ import "../styles/glyphicons.scss";
       &:nth-of-type(1) {
         margin-left: 0;
       }
-      color: inherit;
+      color: $white !important;
       text-decoration: none;
       display: inline-block;
       padding: 2vmin;
       margin: 2vmin 0.5vmin;
       border-radius: 2vmin;
-      background-color: $light-green;
+      background-color: $green;
       &.primary {
         background-color: $ocean;
       }
@@ -90,7 +90,7 @@ import "../styles/glyphicons.scss";
       }
       &.default {
         background-color: $white;
-        color: $black;
+        color: $black !important;
       }
     }
     li {
