--- a/src/pages/docs.astro
+++ b/src/pages/docs.astro
@@ -2,7 +2,7 @@
 ---
 
 <head>
-  <script type="text/javascript">
-    window.location = "http://melonjs.github.io/melonJS/docs/";
-  </script>
+    <script type='text/javascript'>
+        window.location = 'http://melonjs.github.io/melonJS/docs/'
+    </script>
 </head>
