rename the link to NPM

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -59,7 +59,7 @@ const pathname = new URL(Astro.request.url).pathname
                 <a href='#top'>Home</a>
             </li>
             <li>
-                <a href='https://www.npmjs.com/package/melonjs'>Download</a>
+                <a href='https://www.npmjs.com/package/melonjs'>NPM</a>
             </li>
             <li><a href='http://melonjs.github.io/docs/'>API</a></li>
             <li><a href='https://github.com/melonjs/melonJS'>Github</a></li>
