make the header look a little better

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,6 +7,7 @@ const pathname = new URL(Astro.request.url).pathname
     <style lang='scss'>
         @import '../styles/variables.scss';
         header {
+            font-size: 1.2em;
             position: sticky;
             top: 0;
             z-index: 100;
@@ -86,7 +87,7 @@ const pathname = new URL(Astro.request.url).pathname
             </li>
             <li>
                 <a href='https://github.com/melonjs/melonJS'
-                    ><span class='no-mobile'>Git</span><img
+                    ><span class='no-mobile'>GitHub</span><img
                         class='inline'
                         src='/img/github.svg'
                     />
