update the header'

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -87,7 +87,7 @@ const pathname = new URL(Astro.request.url).pathname
             </li>
             <li>
                 <a href='https://github.com/melonjs/melonJS'
-                    ><span class='no-mobile'>GitHub</span><img
+                    ><span>GitHub</span><img
                         class='inline'
                         src='/img/github.svg'
                     />
