make sure the greens match

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@ $mobile-width: 640px;
 $desktop-width: 1080px;
 // Color Palette
 $dark-green: #6ba832;
-$green: #5cb85c;
+$green: #82c743;
 $light-green: #8de48d;
 $jean: #77a4a9;
 $ocean: #337ab7;
