darken the green

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import '../styles/glyphicons.scss'
                     h5,
                     h6,
                     a {
-                        color: $light-green;
+                        color: $dark-green;
                     }
                 }
             }
