--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -69,7 +69,7 @@ const pathname = new URL(Astro.request.url).pathname
                 <a href='#top'>Home</a>
             </li>
             <li>
-                <a href='https://www.npmjs.com/package/melonjs'>NPM</a>
+                <a href='https://www.npmjs.com/package/melonjs'><img alt="npm" class="inline" src="/img/npm.svg"/></a>
             </li>
             <li><a href='http://melonjs.github.io/docs/'>API</a></li>
             <li>
