Fix the wrong link

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -75,7 +75,7 @@ const pathname = new URL(Astro.request.url).pathname
             </li>
             <li><a href='http://melonjs.github.io/docs/'>API</a></li>
             <li>
-                <a href='/wiki/made-with-melonJS'>Gallery</a>
+                <a href='https://github.com/melonjs/melonJS/wiki/made-with-melonJS'>Gallery</a>
             </li>
             <li><a href='https://melonjs.discourse.group'>Forum</a></li>
             <li>
