fix the home link

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -68,7 +68,7 @@ const pathname = new URL(Astro.request.url).pathname
     <nav>
         <ul>
             <li class={pathname === '/' ? 'active' : null}>
-                <a href='#top'>Home</a>
+                <a href='/#top'>Home</a>
             </li>
             <li>
                 <a href='https://www.npmjs.com/package/melonjs'><img alt="npm" class="inline no-bump" src="/img/npm.svg"/></a>
