make the redirects work without javascript

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import Header from '../components/header.astro'
+import Header from '../components/Header.astro'
 import '../styles/global.scss'
 ---
 
