--- a/src/pages/docs.astro
+++ b/src/pages/docs.astro
@@ -1,8 +1,4 @@
 ---
+import Redirect from '../components/Redirect.astro';
 ---
-
-<head>
-    <script type='text/javascript'>
-        window.location = 'http://melonjs.github.io/melonJS/docs/'
-    </script>
-</head>
+<Redirect to="http://melonjs.github.io/melonJS/docs/"/>
