--- a/src/pages/tutorial.astro
+++ b/src/pages/tutorial.astro
@@ -1,5 +1,4 @@
-<head>
-    <script type='text/javascript' global>
-        window.location = 'http://melonjs.github.io/tutorial-platformer'
-    </script>
-</head>
+---
+import Redirect from '../components/Redirect.astro';
+---
+<Redirect to="http://melonjs.github.io/tutorial-platformer"/>
