convert links to https

--- a/src/pages/tutorial.astro
+++ b/src/pages/tutorial.astro
@@ -1,4 +1,4 @@
 ---
 import Redirect from '../components/Redirect.astro';
 ---
-<Redirect to="http://melonjs.github.io/tutorial-platformer"/>
+<Redirect to="https://melonjs.github.io/tutorial-platformer"/>
