--- a/src/pages/docs.astro
+++ b/src/pages/docs.astro
@@ -1,4 +1,4 @@
 ---
 import Redirect from '../components/Redirect.astro';
 ---
-<Redirect to="http://melonjs.github.io/melonJS/docs/"/>
+<Redirect to="https://melonjs.github.io/melonJS/docs/"/>
