update the site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -258,7 +258,7 @@ import '../styles/glyphicons.scss'
                         <li>
                             <a
                                 class='btn default'
-                                href='http://melonjs.github.io/docs/'
+                                href='https://melonjs.github.io/docs/'
                                 role='button'
                                 >Read The Docs &raquo;
                             </a>
