--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -73,7 +73,7 @@ const pathname = new URL(Astro.request.url).pathname
             <li>
                 <a href='https://www.npmjs.com/package/melonjs'><img alt="npm" class="inline no-bump" src="/img/npm.svg"/></a>
             </li>
-            <li><a href='http://melonjs.github.io/docs/'>API</a></li>
+            <li><a href='https://melonjs.github.io/docs/'>API</a></li>
             <li>
                 <a href='https://github.com/melonjs/melonJS/wiki/made-with-melonJS'>Gallery</a>
             </li>
