[#32] make sure all links use https

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -421,7 +421,7 @@ import '../styles/glyphicons.scss'
                     <tbody>
                         <tr>
                             <th>
-                                <a href='http://www.google.com/chrome/'
+                                <a href='https://www.google.com/chrome/'
                                     >Chrome
                                 </a>
                             </th>
@@ -434,7 +434,7 @@ import '../styles/glyphicons.scss'
                         </tr>
                         <tr>
                             <th
-                                ><a href='http://www.apple.com/safari/'
+                                ><a href='https://www.apple.com/safari/'
                                     >Safari
                                 </a>
                             </th>
@@ -447,7 +447,7 @@ import '../styles/glyphicons.scss'
                         </tr>
                         <tr>
                             <th
-                                ><a href='http://www.mozilla.com/'>Firefox</a>
+                                ><a href='https://www.mozilla.com/'>Firefox</a>
                             </th>
                             <td>50+</td>
                             <td
@@ -457,7 +457,7 @@ import '../styles/glyphicons.scss'
                             </td>
                         </tr>
                         <tr>
-                            <th><a href='http://www.opera.com/'>Opera</a></th>
+                            <th><a href='https://www.opera.com/'>Opera</a></th>
                             <td>42+</td>
                             <td
                                 ><span
@@ -494,7 +494,7 @@ import '../styles/glyphicons.scss'
                         </tr>
                         <tr>
                             <th
-                                ><a href='http://www.apple.com/safari/'
+                                ><a href='https://www.apple.com/safari/'
                                     >iOS Safari
                                 </a>
                             </th>
@@ -566,7 +566,7 @@ import '../styles/glyphicons.scss'
                         src='https://user-images.githubusercontent.com/4033090/136762472-bc55a638-c69b-4ff5-9d03-c684c8bea0ea.png'
                     />
                 </a>
-                <a href='http://free-tex-packer.com'>
+                <a href='https://free-tex-packer.com'>
                     <img
                         src='https://user-images.githubusercontent.com/4033090/136762061-1d3a0dfe-dbe0-4d3d-808d-47a49ecf5309.png'
                     />
