added a discourse logo

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -77,7 +77,7 @@ const pathname = new URL(Astro.request.url).pathname
             <li>
                 <a href='https://github.com/melonjs/melonJS/wiki/made-with-melonJS'>Gallery</a>
             </li>
-            <li><a href='https://melonjs.discourse.group'>Forum</a></li>
+            <li><a href='https://melonjs.discourse.group'><img class='inline' src='/img/discourse.svg' />Forum</a></li>
             <li>
                 <a href='https://discord.gg/aur7JMk' target='_blank'
                     ><img class='inline' src='/img/discord.svg' />Discord
