--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../layout/BaseLayout.astro'
+import BaseLayout from '../layouts/BaseLayout.astro'
 import '../styles/glyphicons.scss'
 ---
 
