--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,12 +1,12 @@
 ---
 import Header from '../components/Header.astro'
 import '../styles/global.scss'
-const {description="melonJS is an open source HTML5 game engine"} = Astro.props
+const {description="melonJS is an open source HTML5 game engine", title="melonJS"} = Astro.props
 ---
 
 <html lang='en'>
     <head>
-        <title>melonJS</title>
+        <title>{title}</title>
         <meta name="description" content={description}>
         <meta charset='utf-8' />
         <meta http-equiv='X-UA-Compatible' content='IE=edge' />
