update the redirect

--- a/src/components/Redirect.astro
+++ b/src/components/Redirect.astro
@@ -9,9 +9,9 @@ if (typeof to != 'string') throw new Error("Please supply a valid to")
         <script type="text/javascript" define:vars={{to}}>
             window.location.href = to
         </script>
-        <title>Page Redirection - Melon</title>
+        <title>Page Redirection - melonJS</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href={to}>link to example</a>.
+        If you are not redirected automatically, click <a href={to}>this link</a>.
     </body>
 </html>
