--- a/src/pages/tutorial.astro
+++ b/src/pages/tutorial.astro
@@ -1,4 +1,5 @@
 ---
-import Redirect from '../components/Redirect.astro';
+import Redirect from '../components/Redirect.astro'
 ---
-<Redirect to="https://melonjs.github.io/tutorial-platformer"/>
+
+<Redirect to='https://melonjs.github.io/tutorial-platformer' />
