--- a/src/components/Redirect.astro
+++ b/src/components/Redirect.astro
@@ -1,17 +1,20 @@
 ---
-const {to} = Astro.props
-if (typeof to != 'string') throw new Error("Please supply a valid to")
+const { to } = Astro.props
+if (typeof to != 'string') throw new Error('Please supply a valid to')
 ---
-<html lang="en">
+
+<html lang='en'>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content={"0; url=" + to}>
-        <script type="text/javascript" define:vars={{to}}>
+        <meta charset='UTF-8' />
+        <meta http-equiv='refresh' content={'0; url=' + to} />
+        <script type='text/javascript' define:vars={{ to }}>
             window.location.href = to
         </script>
         <title>Page Redirection - melonJS</title>
     </head>
     <body>
-        If you are not redirected automatically, click <a href={to}>this link</a>.
+        If you are not redirected automatically, click <a href={to}
+            >this link
+        </a>.
     </body>
 </html>
