--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -71,13 +71,22 @@ const pathname = new URL(Astro.request.url).pathname
                 <a href='/#top'>Home</a>
             </li>
             <li>
-                <a href='https://www.npmjs.com/package/melonjs'><img alt="npm" class="inline no-bump" src="/img/npm.svg"/></a>
+                <a href='https://www.npmjs.com/package/melonjs'
+                    ><img alt='npm' class='inline no-bump' src='/img/npm.svg' />
+                </a>
             </li>
             <li><a href='https://melonjs.github.io/docs/'>API</a></li>
             <li>
-                <a href='https://github.com/melonjs/melonJS/wiki/made-with-melonJS'>Gallery</a>
+                <a
+                    href='https://github.com/melonjs/melonJS/wiki/made-with-melonJS'
+                    >Gallery
+                </a>
             </li>
-            <li><a href='https://melonjs.discourse.group'><img class='inline' src='/img/discourse.svg' />Forum</a></li>
+            <li>
+                <a href='https://melonjs.discourse.group'
+                    ><img class='inline' src='/img/discourse.svg' />Forum
+                </a>
+            </li>
             <li>
                 <a href='https://discord.gg/aur7JMk' target='_blank'
                     ><img class='inline' src='/img/discord.svg' />Discord
