make it look nice

--- a/src/layouts/MDLayout.astro
+++ b/src/layouts/MDLayout.astro
@@ -4,5 +4,5 @@ import '../styles/markdown.scss'
 ---
 
 <BaseLayout>
-    <main><slot></slot></main>
+    <main class="md"><slot></slot></main>
 </BaseLayout>
