--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -19,11 +19,11 @@ main.md {
     padding: 5vmin 10vmin;
     display: flex;
     flex-direction: column;
-    // & > * {
-    //     width: fit-content;
-    //     margin-left: auto;
-    //     margin-right: auto;
-    // }
+    & > * {
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+    }
     p:nth-of-type(1) {
         margin-bottom: 5vmin;
         text-align: center;
